# discord-dicebot

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py  server.py
